--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11.9"
 dependencies = [
+    "opencv-python>=4.12.0.88",
     "pandas>=2.3.3",
     "pyqt6>=6.9.1",
 ]
